namespace Scenes.SampleShooting
{
    public interface IDamageable{
        void Damage();
    }
}